crates/ruff_python_parser/tests/snapshots/invalid_syntax@try_stmt_invalid_order.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/try_stmt_invalid_order.py
---
## AST

```
Module(
    ModModule {
        range: 0..47,
        body: [
            Try(
                StmtTry {
                    range: 0..31,
                    body: [
                        Pass(
                            StmtPass {
                                range: 9..13,
                            },
                        ),
                    ],
                    handlers: [],
                    orelse: [],
                    finalbody: [
                        Pass(
                            StmtPass {
                                range: 27..31,
                            },
                        ),
                    ],
                    is_star: false,
                },
            ),
            Pass(
                StmtPass {
                    range: 42..46,
                },
            ),
        ],
    },
)
```
## Errors

error: Invalid syntax
  |
3 | finally:
4 |     pass
5 | else:
  | ^^^^ `else` block must come before `finally` block
6 |     pass
  |


error: Invalid syntax
  |
3 | finally:
4 |     pass
5 | else:
  |     ^ Expected a statement
6 |     pass
  |


error: Invalid syntax
  |
3 | finally:
4 |     pass
5 | else:
  |      ^ Expected a statement
6 |     pass
  |


error: Invalid syntax
  |
4 |     pass
5 | else:
6 |     pass
  | ^^^^ Unexpected indentation
  |


error: Invalid syntax
  |
5 | else:
6 |     pass
  |
